--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -2,9 +2,59 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <title>GeoGrind</title>
   </head>
   <body>
+    <header>
+    <div class="img-container">
+      <h1 class="logo">GeoGrind</h1>
+      <h1 class="front-page-logo">GeoGrind</h1>
+      <p class="front-page">Lorem ipsum dolor sit amet.</p>
+      <nav>
+        <a href="" target="_blank">About</a>
+        <a href="" target="_blank">Coffee</a>
+        <a href="" target="_blank">Bakery</a>
+        <a href="" target="_blank">Locations</a>
+        <a href="" target="_blank">Contact</a>
+      </nav>
+      </div>
+  </header>
+    </div>
 
-  </body>
+<div class="values">
+<section class="section1">
+  <h1>Values</h1>
+  <div class="wrapper1">
+</div>
+<div class="valueswrapper">
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+</section>
+</div>
+
+<section class="section">
+<h1>Locations</h1>
+<div class="flex">
+  <div class=wrapper1>
+    <img src="./images/tartcoffees.jpg" class="image-with-text" alt="coffeebeans"></img>
+    <h2 class="wrapper1">North</h2>
+  </div>
+  <div class=wrapper2>
+    <img src="./images/coldbrew.jpg" class="image-with-text" alt="coffeebeans"></img>
+    <h2 class="wrapper2">South</h2>
+  </div>
+  <div class=wrapper3>
+    <img src="./images/drinkdesserts.jpg" class="image-with-text" alt="coffeebeans"></img>
+    <h2 class="wrapper3">Downtown</h2>
+  </div>
+  </div>
+</section>
+</body>
+
+<footer class="footer">
+  <p>Copyright GeoGrind 2018</p>
+</footer>
 </html>
