added css reset

--- a/checkpoint1/index.html
+++ b/checkpoint1/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>GeoGrind</title>
