--- a/checkpoint2/index.html
+++ b/checkpoint2/index.html
@@ -12,8 +12,8 @@ HTML
   <body>
     <header>
     <div class="img-container">
-      <h1 class="logo">GeoGrind</h1>
-      <h1 class="front-page-logo">GeoGrind</h1>
+      <h1 class="logo">Giovanni's</h1>
+      <h1 class="front-page-logo">Giovanni's</h1>
       <p class="front-page">Lorem ipsum dolor sit amet.</p>
       <nav>
         <a href="" target="_blank">About</a>
