--- a/checkpoint2/index.html
+++ b/checkpoint2/index.html
@@ -12,9 +12,9 @@ HTML
   <body>
     <header>
     <div class="img-container">
-      <h1 class="logo">Giovanni's</h1>
-      <h1 class="front-page-logo">Giovanni's</h1>
-      <p class="front-page">Lorem ipsum dolor sit amet.</p>
+      <h1 class="logo">Geogrind</h1>
+      <!-- <h1 class="front-page-logo">Geogrind</h1> -->
+      <!-- <p class="front-page">Lorem ipsum dolor sit amet.</p> -->
       <nav>
         <a href="" target="_blank">About</a>
         <a href="" target="_blank">Coffee</a>
@@ -26,31 +26,46 @@ HTML
   </header>
     </div>
 
+<div class="row1">
+  <div class="catering">
+  <section class="section1">
+    <h1>Catering</h1>
+    <div class="wrapper1">
+  </div>
+  <div class="valueswrapper">
+    <p>Click here for information on catering!</p>
+    <p class="catering-button">Click me!</p>
+    </div>
+  </section>
+</div>
+
 <div class="values">
 <section class="section1">
   <h1>Values</h1>
   <div class="wrapper1">
 </div>
 <div class="valueswrapper">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
   </div>
 </section>
+</div>
 </div>
 
 <section class="section">
 <h1>Locations</h1>
 <div class="flex">
   <div class=wrapper1>
-    <img src="./images/tartcoffees.jpg" class="image-with-text" alt="coffeebeans"></img>
+    <img src="./img/tartcoffees.jpg" class="image-with-text" alt="coffeebeans"></img>
     <h2 class="wrapper1">North</h2>
   </div>
-  <div class=wrapper2>
-    <img src="./images/coldbrew.jpg" class="image-with-text" alt="coffeebeans"></img>
+  <div class=wrapper1>
+    <img src="./img/coldbrew.jpg" class="image-with-text" alt="coffeebeans"></img>
     <h2 class="wrapper2">South</h2>
   </div>
-  <div class=wrapper3>
-    <img src="./images/drinkdesserts.jpg" class="image-with-text" alt="coffeebeans"></img>
+  <div class=wrapper1>
+    <img src="./img/drinkdesserts.jpg" class="image-with-text" alt="coffeebeans"></img>
     <h2 class="wrapper3">Downtown</h2>
   </div>
   </div>
