added media query

--- a/checkpoint2/index.html
+++ b/checkpoint2/index.html
@@ -4,6 +4,7 @@ HTML
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="./css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
