--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -5,11 +5,11 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script|Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Counter</title>
+    <title>Cash Counter</title>
   <body>
     <div class="main">
       <img src="./img/dollar.png">
-      <h1>Dollar Counter</h1>
+      <h1>Cash Counter</h1>
       <button id="clickme">Click me to earn money!</button>
 
     </div>
